# model_dl_vllm_server

./: .gitignore  README.md  download_model.py  download_model.sh  pyproject.toml  run_blip2_8gb.sh  run_vllm.sh  run_vllm_quantized.sh
